--- a/src/main.scss
+++ b/src/main.scss
@@ -33,4 +33,155 @@
   }
 
   // Header Styles
+  .header-wrapper {
+    margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    h2 {
+      font-size: 1rem;
+      text-align: center;
+      // @include media(">=phone", "<lgphone") {
+      //   font-size: 14px;
+      // }
+      // @include media(">=lgphone", "<tablet") {
+      //   font-size: 16px;
+      // }
+      // @include media(">=tablet", "<desktop") {
+      //   font-size: 16px;
+      // }
+    }
+    .heading-wrapper {
+      h1 {
+        font-size: 4rem;
+        text-align: center;
+        line-height: 20px;
+        // @include media(">=phone", "<lgphone") {
+        //   font-size: 1.5rem;
+        //   line-height: 10px;
+        // }
+        // @include media(">=lgphone", "<tablet") {
+        //   font-size: 1.5rem;
+        //   line-height: 10px;
+        // }
+        // @include media(">=tablet", "<desktop") {
+        //   font-size: 2.5rem;
+        // }
+      }
+    }
+    p {
+      width: 50%;
+      text-align: center;
+      overflow: hidden;
+      // @include media(">=phone", "<lgphone") {
+      //   font-size: 12px;
+      //   width: 100%;
+      // }
+      // @include media(">=lgphone", "<tablet") {
+      //   font-size: 12px;
+      //   width: 100%;
+      // }
+      // @include media(">=tablet", "<desktop") {
+      //   font-size: 14px;
+      //   width: 100%;
+      // }
+    }
+    .primary-btn {
+       text-decoration: none;
+    }
+  }
+
+  .about-section {
+    width: 80vw;
+    margin-top: 10vh;
+    display: flex;
+    justify-content: space-between;
+    // @include media(">=phone", "<lgphone") {
+    //   flex-direction: column-reverse;
+    // }
+    // @include media(">=lgphone", "<tablet") {
+    //   flex-direction: column-reverse;
+    // }
+    // @include media(">=tablet", "<desktop") {
+    //   flex-direction: column-reverse;
+    //   align-items: center;
+    // }
+    .content {
+      width: 50%;
+      // @include media(">=phone", "<lgphone") {
+      //   width: 100%;
+      // }
+      // @include media(">=lgphone", "<tablet") {
+      //   width: 100%;
+      // }
+      // @include media(">=tablet", "<desktop") {
+      //   width: 100%;
+      // }
+  
+      h1 {
+        font-size: 3rem;
+        line-height: 20px;
+        // @include media(">=tablet", "<desktop") {
+        //   text-align: center;
+        // }
+      }
+      // p {
+      //   @include media(">=tablet", "<desktop") {
+      //     text-align: center;
+      //   }
+      // }
+    }
+    .image-wrapper {
+      width: 50%;
+      display: flex;
+      // flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      // @include media(">=phone", "<lgphone") {
+      //   width: 100%;
+      // }
+      // @include media(">=lgphone", "<tablet") {
+      //   width: 100%;
+      // }
+      // @include media(">=tablet", "<desktop") {
+      //   width: 100%;
+      // }
+    }
+
+    .image-wrapper img {
+      width: 60vh;
+   
+    }
+  }
+
+
+  .work-wrapper {
+    width: 80vw;
+    margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h1 {
+      font-size: 3rem;
+      line-height: 20px;
+    }
+    .grid {
+      display: grid;
+      margin-top: 20px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+      // @include media(">=phone", "<lgphone") {
+      //   grid-template-columns: 1fr;
+      // }
+      // @include media(">=lgphone", "<tablet") {
+      //   grid-template-columns: 1fr;
+      // }
+      // @include media(">=tablet", "<desktop") {
+      //   grid-template-columns: 1fr 1fr;
+      // }
+    }
+  }
+  
   
