--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,58 @@
+@charset "utf-8";
+// @import "./include-media.scss";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap");
+
+// Atoms
+// @import "./card.scss";
+
+// Components
+// @import "./navbar.scss";
+// @import "./header.scss";
+// @import "./work.scss";
+// @import "./about.scss";
+// @import "./skills.scss";
+// @import "./promotion.scss";
+// @import "./footer.scss";
+
+* {
+  font-family: "Montserrat";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.section {
+  width: 100vw;
+  height: auto;
+  overflow: hidden;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.primary-btn {
+  margin: 10px;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  border: 0px;
+  transition: all 0.2s ease-in-out;
+  text-decoration: none;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
 // Navbar Styles
 .navbar-wrapper {
     width: 80vw;
@@ -42,50 +97,51 @@
     h2 {
       font-size: 1rem;
       text-align: center;
-      // @include media(">=phone", "<lgphone") {
-      //   font-size: 14px;
-      // }
-      // @include media(">=lgphone", "<tablet") {
-      //   font-size: 16px;
-      // }
-      // @include media(">=tablet", "<desktop") {
-      //   font-size: 16px;
-      // }
+      @media screen and (min-width: 320px) and (max-width: 424px) {
+        font-size: 14px;
+      }
+      @media screen and(min-width: 425px) and (max-width: 767px) {
+        font-size: 16px;
+      }
+      @media screen and(min-width: 768px) and (max-width: 1023px)  {
+        font-size: 16px;
+      }
     }
     .heading-wrapper {
       h1 {
         font-size: 4rem;
         text-align: center;
         line-height: 20px;
-        // @include media(">=phone", "<lgphone") {
-        //   font-size: 1.5rem;
-        //   line-height: 10px;
-        // }
-        // @include media(">=lgphone", "<tablet") {
-        //   font-size: 1.5rem;
-        //   line-height: 10px;
-        // }
-        // @include media(">=tablet", "<desktop") {
-        //   font-size: 2.5rem;
-        // }
+        @media screen and (min-width: 320px) and (max-width: 424px) {
+          font-size: 1.5rem;
+          line-height: 10px;
+        }
+        @media screen and(min-width: 425px) and (max-width: 767px) {
+          font-size: 1.5rem;
+          line-height: 10px;
+        }
+        @media screen and(min-width: 768px) and (max-width: 1023px) {
+          font-size: 2.5rem;
+        }
       }
     }
+
     p {
       width: 50%;
       text-align: center;
       overflow: hidden;
-      // @include media(">=phone", "<lgphone") {
-      //   font-size: 12px;
-      //   width: 100%;
-      // }
-      // @include media(">=lgphone", "<tablet") {
-      //   font-size: 12px;
-      //   width: 100%;
-      // }
-      // @include media(">=tablet", "<desktop") {
-      //   font-size: 14px;
-      //   width: 100%;
-      // }
+      @media screen and (min-width: 320px) and (max-width: 424px) {
+        font-size: 12px;
+        width: 100%;
+      }
+      @media screen and(min-width: 425px) and (max-width: 767px) {
+        font-size: 12px;
+        width: 100%;
+      }
+      @media screen and(min-width: 768px) and (max-width: 1023px) {
+        font-size: 14px;
+        width: 100%;
+      }
     }
     .primary-btn {
        text-decoration: none;
@@ -97,57 +153,58 @@
     margin-top: 10vh;
     display: flex;
     justify-content: space-between;
-    // @include media(">=phone", "<lgphone") {
-    //   flex-direction: column-reverse;
-    // }
-    // @include media(">=lgphone", "<tablet") {
-    //   flex-direction: column-reverse;
-    // }
-    // @include media(">=tablet", "<desktop") {
-    //   flex-direction: column-reverse;
-    //   align-items: center;
-    // }
+    @media screen and (min-width: 320px) and (max-width: 424px) {
+      flex-direction: column-reverse;
+    }
+    @media screen and (min-width: 425px) and (max-width: 767px) {
+      flex-direction: column-reverse;
+    }
+    @media screen and (min-width: 768px) and (max-width:1023px) {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+
     .content {
       width: 50%;
-      // @include media(">=phone", "<lgphone") {
-      //   width: 100%;
-      // }
-      // @include media(">=lgphone", "<tablet") {
-      //   width: 100%;
-      // }
-      // @include media(">=tablet", "<desktop") {
-      //   width: 100%;
-      // }
+      @media screen and (min-width: 320px) and (max-width: 424px) {
+        width: 100%;
+      }
+      @media screen and (min-width: 425px) and (max-width: 767px) {
+        width: 100%;
+      }
+      @media screen and (min-width: 768px) and (max-width: 1023px) {
+        width: 100%;
+      }
   
       h1 {
         font-size: 3rem;
         line-height: 20px;
-        // @include media(">=tablet", "<desktop") {
-        //   text-align: center;
-        // }
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+          text-align: center;
+        }
       }
-      // p {
-      //   @include media(">=tablet", "<desktop") {
-      //     text-align: center;
-      //   }
-      // }
+      p {
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+          text-align: center;
+        }
+      }
     }
+  
     .image-wrapper {
       width: 50%;
       display: flex;
-      // flex-wrap: wrap;
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      // @include media(">=phone", "<lgphone") {
-      //   width: 100%;
-      // }
-      // @include media(">=lgphone", "<tablet") {
-      //   width: 100%;
-      // }
-      // @include media(">=tablet", "<desktop") {
-      //   width: 100%;
-      // }
+      @media screen and (min-width: 320px) and (max-width: 425px) {
+        width: 100%;
+      }
+      @media screen and (min-width: 425px) and (max-width: 768px) {
+        width: 100%;
+      }
+      @media screen and (min-width: 320px) and (max-width: 1280px){
+        width: 100%;
+      }
     }
 
     .image-wrapper img {
@@ -155,7 +212,6 @@
    
     }
   }
-
 
   .work-wrapper {
     width: 80vw;
@@ -172,16 +228,24 @@
       margin-top: 20px;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 10px;
-      // @include media(">=phone", "<lgphone") {
-      //   grid-template-columns: 1fr;
-      // }
-      // @include media(">=lgphone", "<tablet") {
-      //   grid-template-columns: 1fr;
-      // }
-      // @include media(">=tablet", "<desktop") {
-      //   grid-template-columns: 1fr 1fr;
-      // }
+      @media screen and (min-width: 320px) and (max-width: 425px) {
+        grid-template-columns: 1fr;
+      }
+      @media screen and (min-width: 426px) and (max-width: 768px) {
+        grid-template-columns: 1fr;
+      }
+      @media screen and(min-width: 769) and (max-width: 1280px)  {
+        grid-template-columns: 1fr 1fr;
+      }
     }
   }
   
+  // "phone": 320px,
+  // "lgphone": 425px,
+  // "tablet": 768px,
+  // "desktop": 1024px,
+  // "smdesktop": 1280px,
+  // "mddesktop": 1440px,
+  // "lgdesktop": 1920px,
+  // "4k": 2560px,
   
