--- a/src/main.scss
+++ b/src/main.scss
@@ -3,16 +3,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap");
 
 // Atoms
-// @import "./card.scss";
+@import "./card.scss";
 
 // Components
-// @import "./navbar.scss";
-// @import "./header.scss";
-// @import "./work.scss";
-// @import "./about.scss";
+@import "./navbar.scss";
+@import "./header.scss";
+@import "./work.scss";
+@import "./about.scss";
 // @import "./skills.scss";
 // @import "./promotion.scss";
-// @import "./footer.scss";
+@import "./footer.scss";
 
 * {
   font-family: "Montserrat";
@@ -53,193 +53,7 @@ body {
     transform: scale(1.1);
   }
 }
-// Navbar Styles
-.navbar-wrapper {
-    width: 80vw;
-    margin-top: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 80px;
-    .name {
-      font-weight: 600;
-      padding-left: 100px;
-    }
-    .links-wrapper {
-      button {
-        text-decoration: none;
-        padding: 5px;
-        font-family: "Open Sans";
-        opacity: 0.6;
-        transition: all 0.2s ease-in-out;
-        font-size: 20px;
-        background-color: transparent;
-        outline: none;
-        border: 0px;
-        cursor: pointer;
-        &:hover {
-          opacity: 1;
-        }
-      }
-      .active {
-        color: black;
-      }
-    }
-  }
-
-  // Header Styles
-  .header-wrapper {
-    margin-top: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    h2 {
-      font-size: 1rem;
-      text-align: center;
-      @media screen and (min-width: 320px) and (max-width: 424px) {
-        font-size: 14px;
-      }
-      @media screen and(min-width: 425px) and (max-width: 767px) {
-        font-size: 16px;
-      }
-      @media screen and(min-width: 768px) and (max-width: 1023px)  {
-        font-size: 16px;
-      }
-    }
-    .heading-wrapper {
-      h1 {
-        font-size: 4rem;
-        text-align: center;
-        line-height: 20px;
-        @media screen and (min-width: 320px) and (max-width: 424px) {
-          font-size: 1.5rem;
-          line-height: 10px;
-        }
-        @media screen and(min-width: 425px) and (max-width: 767px) {
-          font-size: 1.5rem;
-          line-height: 10px;
-        }
-        @media screen and(min-width: 768px) and (max-width: 1023px) {
-          font-size: 2.5rem;
-        }
-      }
-    }
-
-    p {
-      width: 50%;
-      text-align: center;
-      overflow: hidden;
-      @media screen and (min-width: 320px) and (max-width: 424px) {
-        font-size: 12px;
-        width: 100%;
-      }
-      @media screen and(min-width: 425px) and (max-width: 767px) {
-        font-size: 12px;
-        width: 100%;
-      }
-      @media screen and(min-width: 768px) and (max-width: 1023px) {
-        font-size: 14px;
-        width: 100%;
-      }
-    }
-    .primary-btn {
-       text-decoration: none;
-    }
-  }
-
-  .about-section {
-    width: 80vw;
-    margin-top: 10vh;
-    display: flex;
-    justify-content: space-between;
-    @media screen and (min-width: 320px) and (max-width: 424px) {
-      flex-direction: column-reverse;
-    }
-    @media screen and (min-width: 425px) and (max-width: 767px) {
-      flex-direction: column-reverse;
-    }
-    @media screen and (min-width: 768px) and (max-width:1023px) {
-      flex-direction: column-reverse;
-      align-items: center;
-    }
-
-    .content {
-      width: 50%;
-      @media screen and (min-width: 320px) and (max-width: 424px) {
-        width: 100%;
-      }
-      @media screen and (min-width: 425px) and (max-width: 767px) {
-        width: 100%;
-      }
-      @media screen and (min-width: 768px) and (max-width: 1023px) {
-        width: 100%;
-      }
-  
-      h1 {
-        font-size: 3rem;
-        line-height: 20px;
-        @media screen and (min-width: 768px) and (max-width: 1024px) {
-          text-align: center;
-        }
-      }
-      p {
-        @media screen and (min-width: 768px) and (max-width: 1024px) {
-          text-align: center;
-        }
-      }
-    }
-  
-    .image-wrapper {
-      width: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      @media screen and (min-width: 320px) and (max-width: 425px) {
-        width: 100%;
-      }
-      @media screen and (min-width: 425px) and (max-width: 768px) {
-        width: 100%;
-      }
-      @media screen and (min-width: 320px) and (max-width: 1280px){
-        width: 100%;
-      }
-    }
-
-    .image-wrapper img {
-      width: 60vh;
-   
-    }
-  }
-
-  .work-wrapper {
-    width: 80vw;
-    margin-top: 10vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    h1 {
-      font-size: 3rem;
-      line-height: 20px;
-    }
-    .grid {
-      display: grid;
-      margin-top: 20px;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 10px;
-      @media screen and (min-width: 320px) and (max-width: 425px) {
-        grid-template-columns: 1fr;
-      }
-      @media screen and (min-width: 426px) and (max-width: 768px) {
-        grid-template-columns: 1fr;
-      }
-      @media screen and(min-width: 769) and (max-width: 1280px)  {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-  }
-  
+ 
   // "phone": 320px,
   // "lgphone": 425px,
   // "tablet": 768px,
