--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -5,19 +5,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 80px;
+    // padding-left: 80px;
     .name {
       font-weight: 600;
-      padding-left: 100px;
+    //   padding-left: 100px;
     }
     .links-wrapper {
       button {
         text-decoration: none;
-        padding: 5px;
+        padding: 10px;
         font-family: "Open Sans";
         opacity: 0.6;
         transition: all 0.2s ease-in-out;
-        font-size: 20px;
+        font-size: 15px;
         background-color: transparent;
         outline: none;
         border: 0px;
