--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    onHov
     h1 {
       font-size: 3rem;
       line-height: 20px;
@@ -13,14 +14,17 @@
       margin-top: 20px;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 10px;
-      @media screen and (min-width: 320px) and (max-width: 425px) {
+      @media screen and (min-width: 320px) and (max-width: 424px) {
         grid-template-columns: 1fr;
       }
-      @media screen and (min-width: 426px) and (max-width: 768px) {
+      @media screen and (min-width: 425px) and (max-width: 767px) {
         grid-template-columns: 1fr;
       }
-      @media screen and(min-width: 769) and (max-width: 1280px)  {
+      @media screen and (min-width: 768px) and (max-width: 1280px)  {
         grid-template-columns: 1fr 1fr;
       }
+     :hover {
+      opacity:0.9;
+     }
     }
   }
